promoted city to container, fixed import paths, fixed unwrapped elements in ActiveCity and edited css

--- a/assets/stylesheets/application.scss
+++ b/assets/stylesheets/application.scss
@@ -11,7 +11,7 @@ body {
     width: 30%;
   }
   .active-city {
-    width: 70%;
+    width: 68%;
     margin-left: 20px;
     margin-bottom: 20px;
     padding: 10px 15px;
@@ -19,6 +19,9 @@ body {
     border-radius: 4px;
     h3 {
       margin-top: 0;
+    }
+    img {
+      width: 100%;
     }
   }
 }
